--- a/Systems/10-29.org
+++ b/Systems/10-29.org
@@ -33,3 +33,15 @@ Aim : Where do compsci priests live? - In directory!
 - readdir( <DIRECTORY STREAM> )
 - Returns a pointer to the next entry in a directory stream, or NULL if all entries have already been returned.
 - struct dirent - <sys/types.h>
+  - Directory struct that contains the information sotred in a directory file.
+  - Some of the data members
+    - d_name: Name of a file
+    - d_type: File type as an int
+  - example:
+    - DIR * d;
+    - d = opendir( "somedir" );
+    - struct dirent *entry;
+    - entry = readdir( d );
+** rewinddir - <dirent.h>
+- Resets the directory stream to the beginning
+- rewinddir( <DIRECTORY STREAM> )
