--- a/Systems/11-5.org
+++ b/Systems/11-5.org
@@ -4,3 +4,12 @@ Aid : Go fork off (another process)
 
 /Continued from yesterday.../
 
+- fork() - <unistd.h>
+  - Creates a separate process based on the current one, the new process is called the child, the original is the parent.
+  - The child process is a duplicate of the parent process. All parts of the parent process are copied, including stack and heap memory, and the file table.
+    - A quick note on threads: A thread is a separate executable entity similar to a child process, except a thread is not a standalone process. It does not have its own memory space, but instead it shares its parent's memory.
+  - Returns 0 to the child and the child's PID to the parent or -1 (errno)
+  - If a parent process ends before the child, the child's new parent PID is 1.
+- wait - <unistd.h>
+  - Stops a parent process from running until any child has provided status information to the parent (usually the child has exited).
+  - Returns the PID of the child that exited, or -1 (errno)
