--- a/Systems/11-10.org
+++ b/Systems/11-10.org
@@ -24,5 +24,5 @@ Aim : Invasion of the process snatchers
 - execvp(<PATH>, <ARGUMENT ARRAY>)
 - ARGUMENT ARRAY
   - Array of strings, with element 0 must be the name of the program to be executed and the last element must be NULL
-. Like execlp, the PATH argument will take into PATH environment variable into account.
+- Like execlp, the PATH argument will take into PATH environment variable into account.
   
