--- a/Systems/11-30.org
+++ b/Systems/11-30.org
@@ -44,23 +44,42 @@ Aim : Sending mixed signals
 -----
 ***** An example signal handler, smart.c
 #include <stdio.h>
+
 #include <stdlib.h>
+
 #include <unistd.h>
+
 #include <signal.h>
 
+
 static void sighandler( int signo ){ //sighandler and signo can be different
-  if ( signo  == SIGINT ) //all signals are caught with this one function
+
+  if ( signo  == SIGINT ) //all signals are caught with this one function{
+
     printf("Interrupted... how rude!\n");
+    
+    exit(0);
+    
+  }
+
 }
+
 
 int main(){
 
   signal( SIGINT, sighandler ); //attaches sighandler to the signal sent
 
+
   int i = 0;
+
   while(1){
+
   printf("G'day mate!\t%d\t%d\n", i++, getpid());
+
   sleep(1);
+
   }
+
   return 0;
+
 }
